code fixes.

Legend:

* -> Security Fix
# -> Bug Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

03-June-2010 Jean-Marie Simonet
# [#20744] Logout link in administrator panel isn't logout when editing content. Thanks Andrew.
$ Missing strings
# [#20768] It is possible to create a single-contact menu entry without selecting a contact. Thanks Amy.

03-June-2010 Christophe Demko
 # Fixed issue [#20591] Cannot delete all usergroups from an access level (Robert Flodstrom)
 # Fixed issue [#20825] [patch] Debug plug-in doesn't output well formed code (Rouven Weßling)
 # Fixed issue [#20697] Uninstalling a component does not remove menu items of that component type
 # UI enhancement for com_menus
 # Fixed issue [#20805] Module linked to menu links (Aytug AKAR, Nikolai Plath, bill richardson)
 # Fixed issue [#20820] menu create - single contact typo error (bill richardson)
 # Fixed issue [#20789] featured contacts (bill richardson)
 # Fixed issue [#20819] Incorrect Label on Access Level Filter box on User Manager Access Level Screen (Ian McLennan)

02-June-2010 Jean-Marie Simonet
# [#20787] some misc html typos. Thanks Phil.
# [#20677] duplicate key error. Thanks Nicholas.
# [#20506] Field required: cache_handler - message in Global Config. Thanks Christophe and Klas
# [#20809] Unable to run installation in IE8. Thanks Ian
 
02-June-2010 Andrew Eddie
 # Fixed issue [#20771] validate.js causing problems with IE8 (Bill Richardson, Phil Snell).
 # Fixed issue [#20788] Error when saving template style for administrator template.

02-June-2010 Christophe Demko
 # Corrected the atomic template since its index.php file is not a correct xml file
 # Fixed issue [#20758] Property root_user in configuration could be a big security breach. (thanks Henrik Hussfelt, Martin Blodau, Andrew Eddie).
 # Fixed issue [#20795] user profile plugin typo error (thanks bill richardson)