@@ -72,6 +72,7 @@ COM_NEWSFEEDS_FIELD_VALUE_SITE="Site Language Direction"
 COM_NEWSFEEDS_FIELD_WORD_COUNT_DESC="How many words to include in a feed"
 COM_NEWSFEEDS_FIELD_WORD_COUNT_LABEL="Word Count"
 COM_NEWSFEEDS_FIELDSET_MORE_OPTIONS_LABEL="More Options"
+COM_NEWSFEEDS_FILTER_SEARCH_DESC="Enter here a Newsfeed title to search."
 COM_NEWSFEEDS_MANAGER_NEWSFEED="News Feed Manager: Newsfeed"
 COM_NEWSFEEDS_MANAGER_NEWSFEEDS="News Feed Manager"
 COM_NEWSFEEDS_N_ITEMS_ARCHIVED="%d newsfeeds successfully archived"
@@ -93,8 +94,8 @@ COM_NEWSFEEDS_NUM_ARTICLES_HEADING="Feed Count"
 COM_NEWSFEEDS_PUBLISH_ITEM="Publish Newsfeed"
 COM_NEWSFEEDS_SAVE_SUCCESS="Newsfeed successfully saved"
 COM_NEWSFEEDS_SEARCH_IN_TITLE="Search"
-COM_NEWSFEEDS_SELECT_FEED="Select feed"
 COM_NEWSFEEDS_SELECT_A_FEED="Select feed"
+COM_NEWSFEEDS_SELECT_FEED="Select feed"
 COM_NEWSFEEDS_SUBMENU_CATEGORIES="Categories"
 COM_NEWSFEEDS_SUBMENU_NEWSFEEDS="News Feeds"
 COM_NEWSFEEDS_UNPUBLISH_ITEM="Unpublish Newsfeed"
