@@ -31,6 +31,7 @@ $ -> Language fix or change
 # [#20744] Logout link in administrator panel isn't logout when editing content. Thanks Andrew.
 $ Missing strings
 # [#20768] It is possible to create a single-contact menu entry without selecting a contact. Thanks Amy.
+# [#20761] Unclear how to select contact for single contact menu item. Thanks Elin.
 
 03-June-2010 Christophe Demko
  # Fixed issue [#20591] Cannot delete all usergroups from an access level (Robert Flodstrom)
